# cRIPT

./: CMakeLists.txt  README.md  build.sh
cmake/: FindBoringSSL.cmake  FindLsQuic.cmake
examples/: CMakeLists.txt  ript_server.c
riptlib/: CMakeLists.txt
riptlib/include/: ript.h
riptlib/src/: ript.c
